tests/baselines/reference/commentsOnObjectLiteral1.errors.txt
tests/cases/compiler/commentsOnObjectLiteral1.ts(1,14): error TS2552: Cannot find name 'makeClass'. Did you mean 'parseFloat'?


==== tests/cases/compiler/commentsOnObjectLiteral1.ts (1 errors) ====
    var Person = makeClass( 
                 ~~~~~~~~~
!!! error TS2552: Cannot find name 'makeClass'. Did you mean 'parseFloat'?
       /** 
         @scope Person 
       */ 
       {
       } 
    );